[gd_scene load_steps=9 format=3 uid="uid://ifm4ef6lvrhi"]

[ext_resource type="Script" uid="uid://cu1ntiirqsfub" path="res://src/Settings/settings.gd" id="1_jqvh0"]
[ext_resource type="PackedScene" uid="uid://hojhgp2tlg3b" path="res://src/Background/Background.tscn" id="2_6netp"]
[ext_resource type="FontFile" uid="uid://b7pe7jy61wrbo" path="res://assets/fonts/Lemon Days.ttf" id="3_thnjq"]
[ext_resource type="Texture2D" uid="uid://bsvwqhjqq87h4" path="res://assets/images/button_rectangle_depth_flat.png" id="4_5o5h4"]
[ext_resource type="Texture2D" uid="uid://e1mxdr6qd3ac" path="res://assets/images/icon_circle.png" id="4_8lpai"]
[ext_resource type="Texture2D" uid="uid://n72vfrbd0imh" path="res://assets/images/icon_outline_circle.png" id="5_jxjyi"]
[ext_resource type="Texture2D" uid="uid://b7fw521n0ulr1" path="res://assets/images/button_rectangle_depth_gloss.png" id="5_mdo30"]
[ext_resource type="Texture2D" uid="uid://3g3hxxbr0cm8" path="res://assets/images/button_rectangle_depth_gradient.png" id="6_pu453"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqvh0")

[node name="Background" parent="." instance=ExtResource("2_6netp")]

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 263.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_thnjq")
theme_override_font_sizes/font_size = 192
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.5
offset_top = -263.0
offset_right = 232.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="MusicSlider" type="VBoxContainer" parent="ButtonBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="ButtonBox/MusicSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_thnjq")
theme_override_font_sizes/font_size = 48
text = "Music Volume:  100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="ButtonBox/MusicSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_8lpai")
theme_override_icons/grabber_highlight = ExtResource("5_jxjyi")
value = 100.0
rounded = true

[node name="SfxSlider" type="VBoxContainer" parent="ButtonBox"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="ButtonBox/SfxSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_thnjq")
theme_override_font_sizes/font_size = 48
text = "SFX Volume: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SfxSlider" type="HSlider" parent="ButtonBox/SfxSlider"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_8lpai")
theme_override_icons/grabber_highlight = ExtResource("5_jxjyi")
value = 100.0
rounded = true

[node name="ResetButton" type="TextureButton" parent="ButtonBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_5o5h4")
texture_pressed = ExtResource("5_mdo30")
texture_hover = ExtResource("6_pu453")

[node name="Label" type="Label" parent="ButtonBox/ResetButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_thnjq")
theme_override_font_sizes/font_size = 72
text = "Reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 308.0
offset_top = 999.0
offset_right = 692.0
offset_bottom = 1127.0
size_flags_horizontal = 4
texture_normal = ExtResource("4_5o5h4")
texture_pressed = ExtResource("5_mdo30")
texture_hover = ExtResource("6_pu453")

[node name="Label" type="Label" parent="BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_thnjq")
theme_override_font_sizes/font_size = 72
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="ButtonBox/MusicSlider/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="ButtonBox/SfxSlider/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="ButtonBox/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
